--- a/app/views/pages/homevendedor.ejs
+++ b/app/views/pages/homevendedor.ejs
@@ -353,8 +353,8 @@
               <nav class="grid-artigos">
                 <img src="imagens/metalizado.png" alt="Moda Metalizada" class="imagem-artigo">
                 <section class="artigo-texto">
-                  <h3>MODA |</h3>
-                  <h3>METALIZADA |</h3>
+                  <h3 class="vintelo-text">MODA |</h3>
+                  <h3 class="vintelo-text">METALIZADA |</h3>
                   <a href="/artigo" class="ler-agora">Ler agora</a>
                 </section>
               </nav>
