--- a/app/public/css/categorias.css
+++ b/app/public/css/categorias.css
@@ -166,13 +166,13 @@ nav.grid img {
 .grid-produtos {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 0px 60px;
+  align-items: baseline;
+  padding: 0px 25px;
   margin-bottom: 15px;
 }
 
 h3 {
-  font-size: 40px;
+  font-size: 20px;
   color: #797373;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
@@ -183,10 +183,12 @@ h3 {
 }
 
 .ver-tudo {
-  font-size: 30px;
+  font-size: 15px;
   color: #7f7a7b;
   text-decoration: underline;
   text-decoration-color: rgb(255, 255, 255);
+  margin-right: 20px;
+  line-height: 1;
 }
 
 /*               Carrossel de produtos                  */
